--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Bygger og ruller ut konteiner-app til Azure - dibk-ip-prod
 
 on:
@@ -31,6 +28,14 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - name: Henter virksomhetssertifikat fra Key Vault og setter passord på det
+      run: |
+        az keyvault secret download --encoding base64 --name ${{ vars.AZURE_KV_CERT_NAME }} --file vs.p12 --vault-name ${{ vars.KEYVAULT_NAME }}
+        empty=
+        openssl pkcs12 -in vs.p12 -passin pass:$empty -nodes -out vs-auth.pem
+        openssl pkcs12 -export -in vs-auth.pem -out ${{ vars.KEYSTORE_FILE }} -passout pass:${{secrets.KEYSTORE_PASS}} -name ${{vars.KEYSTORE_ALIAS}}
+        rm vs-auth.pem vs.p12
+
     - name: Hent integrasjonspunktet fra cache
       id: app-cache
       uses: actions/cache@v4
@@ -54,19 +59,13 @@ jobs:
         az login --service-principal -u ${{ vars.AZURE_SP_ID }} -p ./sp.cert --tenant ${{ vars.AZURE_TENANT_ID }}
         az acr login --name ${{vars.ACR}}
 
-    - name: Henter virksomhetssertifikat fra Key Vault og setter passord på det
-      run: |
-        az keyvault secret download --encoding base64 --name ${{ vars.AZURE_KV_CERT_NAME }} --file vs.p12 --vault-name ${{ vars.KEYVAULT_NAME }}
-        empty=
-        openssl pkcs12 -in vs.p12 -passin pass:$empty -nodes -out vs-auth.pem
-        openssl pkcs12 -export -in vs-auth.pem -out auth.p12 -passout pass:${{secrets.KEYSTORE_PASS}} -name ${{vars.KEYSTORE_ALIAS}}
-        rm vs-auth.pem vs.p12
-
     - name: Henter inn CA-sertifikater
       run: |
         curl -Lso docker/trustcerts/BuyPassClass3RootCA.cer "${{ env.certsUrl }}/BPClass3RootCA.cer"
         curl -Lso docker/trustcerts/CommfidesClass3RootCA.cer "${{ env.certsUrl }}/cpn%20rootca%20sha256%20class%203.crt"
         openssl s_client -connect ${{vars.ALTINN_HOST}}:${{env.altinnPort}} < /dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > docker/trustcerts/${{vars.ALTINN_HOST}}.cer
+
+
 
     - name: Befolker properties og motd
       env:
@@ -76,7 +75,7 @@ jobs:
         ORG_NR: ${{vars.ORG_NR}}
         KEYSTORE_ALIAS: ${{vars.KEYSTORE_ALIAS}}
         KEYSTORE_PASS: ${{secrets.KEYSTORE_PASS}}
-        KEYSTORE_PATH: ${{vars.KEYSTORE_PATH}}
+        KEYSTORE_PATH: file:${{vars.KEYSTORE_FILE}}
         KEYSTORE_TYPE: ${{vars.KEYSTORE_TYPE}}
         DPO_ENABLE: ${{vars.DPO_ENABLE}}
         DPO_USERNAME: ${{vars.DPO_USERNAME}}
@@ -120,6 +119,7 @@ jobs:
         ACRPATH: ${{ env.acrPath }}
         APP_DIR: ${{ env.appDir }}
         SERVER_PORT: ${{ vars.SERVER_PORT }}
+        KEYSTORE_FILE: ${{ vars.KEYSTORE_FILE }}
       with:
         files: 'docker-bake.hcl'
         push: true
