Endrer til å bygge target production

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -121,6 +121,7 @@ jobs:
       with:
         files: 'docker-bake.hcl'
         push: true
+        targets: ${{ vars.APP_ENV }}
   
   utrulling:
     runs-on: self-hosted
