--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -1,6 +1,12 @@
-name: Bygger og ruller ut konteiner-app til Azure - dibk-ip-prod
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy container app to Azure Web App - dibk-ip-staging
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -18,7 +24,7 @@ permissions:
 jobs:
   bygging:
     runs-on: [self-hosted, macOS]
-    environment: production
+    environment: staging
 
     steps:
     - uses: actions/checkout@v4
@@ -126,8 +132,6 @@ jobs:
         tags: |
           # Kort SHA > 'sha-xxxxxx'
           type=sha,prefix=${{ vars.APP_ENV }}-,format=short
-          # set latest tag for production branch
-          type=raw,value=latest
           type=raw,value=${{ vars.APP_ENV }}
 
     - name: Bygg og push
@@ -149,27 +153,11 @@ jobs:
         cache-from: type=registry,ref=${{ vars.ACR }}${{ env.acrPath }}:${{ vars.APP_ENV }}-buildcache
         cache-to: type=registry,ref=${{ vars.ACR }}${{ env.acrPath }}:${{ vars.APP_ENV }}-buildcache,mode=max
 
-    # - name: Bygger og publiserer image
-    #   uses: docker/bake-action@v5
-    #   env:
-    #     APP_ENV: ${{ vars.APP_ENV }}
-    #     APP_VERSION: ${{ steps.getAppVersion.outputs.appVersion }}
-    #     S6_OVERLAY_VERSION: ${{ env.s6version }}
-    #     ACR: ${{ vars.ACR }}
-    #     ACRPATH: ${{ env.acrPath }}
-    #     APP_DIR: ${{ env.appDir }}
-    #     SERVER_PORT: ${{ vars.SERVER_PORT }}
-    #     KEYSTORE_FILE: ${{ vars.KEYSTORE_FILE }}
-    #   with:
-    #     files: 'docker-bake.hcl'
-    #     push: true
-    #     targets: ${{ vars.APP_ENV }}
-  
   utrulling:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: bygging
-    environment: 
-      name: production
+    environment:
+      name: 'staging'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -177,7 +165,7 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'dibk-ip-prod'
+        app-name: 'dibk-ip-staging'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8e31a0a286fe4f0a9fc10228293a10a9 }}
-        images: '${{ vars.ACR }}${{ env.acrPath }}:${{vars.APP_ENV}}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_47203314638d4f4dbf6b8e6c4bf67799 }}
+        images: 'dibknoe.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_8a22ae28be494dd8b1489a496e05a1f9 }}/app/integrasjonspunkt:${{ github.sha }}'
