--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Innlogging til Azure CLI (OIDC)
       uses: azure/login@v2
       with:
-        client-id: ${{ vars.AZURE_SP_ID }}
+        client-id: ${{ vars.DIBK_GITHUBACTIONS_SP_ID }}
         tenant-id: ${{ vars.AZURE_TENANT_ID }}
         subscription-id: ${{ vars.AZURE_SUBID_INTERNAL }}
 
