Github Actions: Mange små utbedringer for å avhjelpe bygging

--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -25,8 +25,17 @@ jobs:
   bygging:
     runs-on: [self-hosted, macOS]
     environment: staging
-
+    outputs:
+      sha_short: ${{ steps.build_vars.outputs.sha_short }}
+     
     steps:
+    - name: Sett byggevariabler
+      run: |
+        echo "build_date=$(date '+%Y%m%d')" >> $GITHUB_OUTPUT
+        echo "build_date_long=$(date '+%Y%m%d_%H%M')" >> $GITHUB_OUTPUT
+        echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      id: build_vars
+
     - uses: actions/checkout@v4
 
     - name: Lås opp nøkkelring
@@ -48,8 +57,7 @@ jobs:
     - name: Henter virksomhetssertifikat fra Key Vault og setter passord på det
       run: |
         az keyvault secret download --encoding base64 --name ${{ vars.AZURE_KV_CERT_NAME }} --file vs.p12 --vault-name ${{ vars.KEYVAULT_NAME }}
-        empty=
-        openssl pkcs12 -in vs.p12 -passin pass:$empty -nodes -out vs-auth.pem
+        openssl pkcs12 -in vs.p12 -passin pass: -nodes -out vs-auth.pem
         openssl pkcs12 -export -in vs-auth.pem -out ${{ vars.KEYSTORE_FILE }} -passout pass:${{secrets.KEYSTORE_PASS}} -name ${{vars.KEYSTORE_ALIAS}}
         rm vs-auth.pem vs.p12
 
@@ -130,9 +138,9 @@ jobs:
           ${{ vars.ACR }}${{ env.acrPath }}         
         # generate Docker tags based on the following events/attributes
         tags: |
-          # Kort SHA > 'sha-xxxxxx'
+          # Kort SHA > 'staging-xxxxxx'
           type=sha,prefix=${{ vars.APP_ENV }}-,format=short
-          type=raw,value=${{ vars.APP_ENV }}
+          type=raw,value=${{steps.getAppVersion.outputs.appVersion}}-${{ vars.APP_ENV }}
 
     - name: Bygg og push
       uses: docker/build-push-action@v6
@@ -168,4 +176,4 @@ jobs:
         app-name: 'dibk-ip-staging'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_47203314638d4f4dbf6b8e6c4bf67799 }}
-        images: 'dibknoe.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_8a22ae28be494dd8b1489a496e05a1f9 }}/app/integrasjonspunkt:${{ github.sha }}'
+        images: '${{ vars.ACR }}${{ env.acrPath }}:${{ vars.APP_ENV }}-${{needs.bygging.outputs.sha_short}}'
