Github Actions: Bygger nå for to plattformer

--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -145,7 +145,7 @@ jobs:
     - name: Bygg og push
       uses: docker/build-push-action@v6
       with:
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         file: docker/Dockerfile
         context: .
