--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
 
     - uses: actions/checkout@v4
-    
+
     - name: Sett byggevariabler
       run: |
         echo "build_date=$(date '+%Y%m%d')" >> $GITHUB_OUTPUT
@@ -142,7 +142,7 @@ jobs:
     - name: Bygg og push
       uses: docker/build-push-action@v6
       with:
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         file: docker/Dockerfile
         context: .
