--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -24,6 +24,9 @@ permissions:
 jobs:
   bygging:
     runs-on: [self-hosted, macOS]
+    concurrency:
+      group: integrasjonspunkt-staging-build
+      cancel-in-progress: true
     environment: staging
     outputs:
       sha_short: ${{ steps.build_vars.outputs.sha_short }}
