--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -65,7 +65,11 @@ jobs:
       id: getAppVersion
       run: |
         curl -Lso maven-metadata.xml "${{ env.mavenRepo }}/maven-metadata.xml"
-        echo "appVersion=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)" >> $GITHUB_OUTPUT
+        appVersion=$(sed -ne '/latest/{s/.*<latest>\(.*\)<\/latest>.*/\1/p;q;}' <<< cat maven-metadata.xml)
+        if [[ "$appVersion" =~ "beta" ]]; then
+          appVersion=${{ vars.JAR_VERSION }}
+        fi
+        echo "appVersion=${appVersion}" >> $GITHUB_OUTPUT
 
     - name: Hent integrasjonspunktets jar-fil fra cache
       id: app-cache
