--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,6 +12,8 @@ env:
   mavenRepo: 'https://repo1.maven.org/maven2/no/difi/meldingsutveksling/integrasjonspunkt'
   certsUrl: 'https://github.com/felleslosninger/docs/raw/gh-pages/resources/begrep/sikkerDigitalPost/sikkerhet/sertifikater/prod'
   altinnPort: 443
+  default_ttl: '24'
+  platforms: 'linux/amd64,linux/arm64'
 
 permissions:
   id-token: write
@@ -129,7 +131,7 @@ jobs:
         MAIL_AUTH: ${{vars.MAIL_AUTH}}
         MAIL_USER: ${{vars.MAIL_USER}}
         MAIL_PASSWORD: ${{secrets.MAIL_PASSWORD}}
-        MESSAGE_TTL: ${{ vars.MESSAGE_TTL }}
+        MESSAGE_TTL: ${{ vars.MESSAGE_TTL || env.default_ttl }}
       run: |
         envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
         envsubst < "docker/motd.template" > "docker/motd.sh"
@@ -158,7 +160,7 @@ jobs:
     - name: Bygg og push
       uses: docker/build-push-action@v6
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: ${{ env.platforms }}
         push: true
         file: docker/Dockerfile
         context: .
@@ -173,22 +175,6 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=registry,ref=${{ vars.ACR }}${{ env.acrPath }}:${{ vars.APP_ENV }}-buildcache
         cache-to: type=registry,ref=${{ vars.ACR }}${{ env.acrPath }}:${{ vars.APP_ENV }}-buildcache,mode=max
-
-    # - name: Bygger og publiserer image
-    #   uses: docker/bake-action@v5
-    #   env:
-    #     APP_ENV: ${{ vars.APP_ENV }}
-    #     APP_VERSION: ${{ steps.getAppVersion.outputs.appVersion }}
-    #     S6_OVERLAY_VERSION: ${{ env.s6version }}
-    #     ACR: ${{ vars.ACR }}
-    #     ACRPATH: ${{ env.acrPath }}
-    #     APP_DIR: ${{ env.appDir }}
-    #     SERVER_PORT: ${{ vars.SERVER_PORT }}
-    #     KEYSTORE_FILE: ${{ vars.KEYSTORE_FILE }}
-    #   with:
-    #     files: 'docker-bake.hcl'
-    #     push: true
-    #     targets: ${{ vars.APP_ENV }}
   
   utrulling:
     runs-on: self-hosted
