--- a/.github/workflows/build-and-deploy-staging.yml
+++ b/.github/workflows/build-and-deploy-staging.yml
@@ -1,12 +1,10 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Bygg og rull ut - dibk-ip-staging
+name: Bygg og rull ut - dibk-ip-staging (fungerer ikke)
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "4 6 */2 * *"
 
 env:
   acrPath: /app/integrasjonspunkt
